--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "author": "Microsoft",
     "scripts": {
         "start": "node index.js"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.18.2"
     }
 }
